* Inodes are no longer trimmed from the checking thread. This should fix bug   #3190.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28845 a95241bf-73f2-0310-859d-f6bbb57e9c96